# third_party_spirv-tools

./: .gitignore  BUILD.gn  OAT.xml  README.OpenSource  bundle.json
build_overrides/: build.gni
include/spirv-tools/: libspirv.h
source/: spirv_validator_options.h
source/link/: BUILD.gn
source/lint/: BUILD.gn
source/opt/: BUILD.gn  pass_manager.cpp  redundancy_elimination.cpp
source/reduce/: BUILD.gn
source/val/: BUILD.gn  validate_memory.cpp
test/fuzzers/: BUILD.gn
test/val/: val_id_test.cpp  val_memory_test.cpp
